# vget

./: .air.toml  .gitignore  .goreleaser.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  README_de.md  README_es.md  README_fr.md  README_jp.md  README_kr.md  README_zh.md  TODO.md  compose.yml  go.mod  go.sum  sites.md
.github/workflows/: build-base-image.yml  build-base-images.yml  ci.yml  release.yml
cmd/vget-server/: main.go
docker/vget/: Dockerfile  Dockerfile.arm64  entrypoint-arm64.sh  entrypoint.sh
docker/vget-base/: Dockerfile
docs/: FAQs.md  PRD.md  YOUTUBE_NOTES.md  ai.md  bilibili-port-plan.md  homebrew-distribution.md  http-server-mode.md  local-first-transcription.md  multi-binary-architecture.md  tauri.md  telegram.md  torrent-dispatch.md  xhs-mcp-analysis.md  zsh-completion-limit.md
docs/ai/: PRD.md  ai-enabled-vget-cli.md  ai-powered-vget-cli-prd.md  ai-powered-vget-docker-prd.md  ai-powered-vget-prd.md  ai.md  cdn-anti-abuse.md  docker-gpu-passthrough.md  local-first-speech-to-text.md  long-audio.md
internal/cli/: ai.go  browse.go  cli.go  completion.go  config.go  extract.go  init.go  kuaidi100.go  login.go  ls.go  root.go  search.go  search_tui.go  serve.go  server.go  telegram.go  version.go
internal/config/: config.go  config_test.go  wizard.go
internal/downloader/: downloader.go  hls.go  progress.go
internal/extractor/: apple.go  browser.go  direct.go  extractor.go  registry.go  telegram.go  twitter.go  types.go  xiaohongshu.go  xiaoyuzhou.go  youtube.go
internal/i18n/: i18n.go
internal/server/: ai.go  ai_job.go  bilibili.go  embed.go  job.go  local_ai.go  local_ai_noai.go  podcast.go  server.go  webdav_browse.go
tauri/: index.html  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: config.rs  ffmpeg.rs  lib.rs  md2pdf.rs
tauri/src-tauri/src/downloader/: simple.rs
tauri/src-tauri/src/extractor/: bilibili.rs  direct.rs  mod.rs  twitter.rs  types.rs
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+186 files in other folders)
