[package]
name = "vget-desktop"
version = "0.1.0"
description = "vget Desktop - Media Downloader"
authors = ["guiyumin"]
edition = "2021"

[lib]
name = "vget_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "stream"] }
futures = "0.3"

dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
urlencoding = "2"
regex = "1"
thiserror = "1"
md5 = "0.7"
ffmpeg-sidecar = "2"

# PDF processing
lopdf = "0.34"
image = "0.25"
printpdf = "0.8"

# Markdown to PDF
pulldown-cmark = "0.12"
headless_chrome = "1.0"
syntect = "5"
base64 = "0.22"
